@@ -15,6 +15,7 @@ import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.assets.AssetDescriptor;
 import com.badlogic.gdx.assets.AssetManager;
 import com.badlogic.gdx.files.FileHandle;
+import com.badlogic.gdx.graphics.g2d.TextureAtlas;
 import com.badlogic.gdx.maps.tiled.TiledMap;
 import com.badlogic.gdx.utils.Array;
 import com.badlogic.gdx.utils.ObjectMap;
@@ -70,6 +71,11 @@ public class TsxTilesetSource extends TilesetSource {
 	@Override
 	public void loadTexture(AssetManager assetManager, FileHandle tmxPath) {
 		tileset.loadTexture(assetManager, tmxPath);
+	}
+
+	@Override
+	public void loadTexture(TextureAtlas textureAtlas) {
+		tileset.loadTexture(textureAtlas);
 	}
 
 	@Override
