@@ -4,6 +4,7 @@
 - Added GameDataSerializable interface for reading/writing binary data
 - Added method to get file handles within the player data directory
 - Added CustomCursor class for implementing custom cursors with up/down state
+- Tilesets can now be loaded from TextureAtlas instances
 - UiContainer can now have multiple navigation action keys
 - Mdx.playerData now uses temp files to write before moving files to target filename
 - Fixed Graphics#tint not being reset each frame
